// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModal/> should display the component correctly 1`] = `
<div>
  <div
    class="modal-container"
    style="z-index: 5; transition-delay: 0ms;"
  >
    <div
      class="backdrop opened"
      style="transition-delay: 150ms; transition-duration: 150ms;"
    />
    <div
      class="modal opened"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;

exports[`<HelpCenterEditModal/> should display the component in fullscreen mode correctly 1`] = `
<div>
  <div
    class="modal-container"
    style="z-index: 5; transition-delay: 0ms;"
  >
    <div
      class="backdrop opened"
      style="transition-delay: 150ms; transition-duration: 150ms;"
    />
    <div
      class="modal fullscreen opened"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;
